# highlighter

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
evals/: __main__.py  baseline-pipeline.json  baseline.json  baseline.py  fixtures.py  runner.py  score.py  selector.py
evals/fixtures/cases/: agentcore-get-started-cli.yaml  battle-of-port-arthur.yaml  climate-change-in-malawi.yaml  github-privacy-policy.yaml  jose-durao-barroso.yaml  kubernetes-changelog.yaml
evals/fixtures/docs/: agentcore-get-started-cli.md  battle-of-port-arthur.md  climate-change-in-malawi.md  jose-durao-barroso.md
evals/fixtures/pipeline/: agentcore-get-started-cli.yaml  climate-change-in-malawi.yaml
evals/pipeline/: __main__.py  fixtures.py  runner.py
highlighter/: __main__.py  chunk.py  consolidate.py  expand.py  extract.py  matching.py  normalize.py  query.py  run.py  synthesize.py
tests/: conftest.py  llm_helpers.py  test_baseline.py  test_chunk.py  test_cli.py  test_consolidate.py  test_evals_cli.py  test_expand.py  test_extract.py  test_extract_async.py  test_fixtures.py  test_matching.py  test_normalize.py  test_pipeline_cli.py  test_pipeline_fixtures.py  test_pipeline_runner.py  test_run.py  test_runner.py  test_score.py  test_selector.py  test_synthesize.py
